errors.txt
=== GIcairo ===

    File "Gtk/CellArea.ml", line 222, characters 4-25:
    222 |     GIcairo.Types.context -> 
              ^^^^^^^^^^^^^^^^^^^^^
    Error: Unbound module GIcairo


    File "Gtk/CellRenderer.ml", line 99, characters 4-25:
    99 |     GIcairo.Types.context -> 
            ^^^^^^^^^^^^^^^^^^^^^
    Error: Unbound module GIcairo


    File "Gtk/Container.ml", line 97, characters 4-25:
    97 |     GIcairo.Types.context -> 
            ^^^^^^^^^^^^^^^^^^^^^
    Error: Unbound module GIcairo


    File "Gtk/PrintContext.ml", line 73, characters 4-25:
    73 |     GIcairo.Types.context -> 
            ^^^^^^^^^^^^^^^^^^^^^
    Error: Unbound module GIcairo


    File "Gtk/Widget.ml", line 124, characters 92-113:
    124 |     let draw = {name="draw"; classe=`widget; marshaller=fun f -> marshal1 (unsafe_pointer : GIcairo.Types.context data_conv) "Widget::draw" f}
                                                                                                      ^^^^^^^^^^^^^^^^^^^^^
    Error: Unbound module GIcairo


    File "Gtk/Image.ml", line 40, characters 48-69:
    40 |         {name="surface"; conv=(unsafe_pointer : GIcairo.Types.surface data_conv)}
                                                        ^^^^^^^^^^^^^^^^^^^^^
    Error: Unbound module GIcairo


    File "Gtk/Style.ml", line 38, characters 4-25:
    38 |     GIcairo.Types.context -> 
            ^^^^^^^^^^^^^^^^^^^^^
    Error: Unbound module GIcairo

=== Escaping ===

    File "Gtk/PageSetup.ml", line 31, characters 4-14:
    31 |     Enums.unit -> 
            ^^^^^^^^^^
    Error: Unbound type constructor Enums.unit
    Hint: Did you mean unit_?


    Hint: Did you mean GIPango?
    File "Gtk/PrintOperation.ml", line 50, characters 27-37:
    50 |         {name="unit"; conv=Enums.unit}
                                    ^^^^^^^^^^
    Error: Unbound value Enums.unit
    Hint: Did you mean unit_?


    File "Gtk/PrintSettings.ml", line 97, characters 4-14:
    97 |     Enums.unit -> 
            ^^^^^^^^^^
    Error: Unbound type constructor Enums.unit
    Hint: Did you mean unit_?

=== New in same file ===

    File "Gtk/ClipboardG.ml", line 52, characters 15-35:
    52 |   method get : ClipboardG.clipboard = 
                        ^^^^^^^^^^^^^^^^^^^^
    Error: The module ClipboardG is an alias for module GIGtk__ClipboardG, which is missing


    File "Gtk/RcStyleG.ml", line 13, characters 16-33:
    13 |   method copy : RcStyleG.rc_style = 
                        ^^^^^^^^^^^^^^^^^
    Error: The module RcStyleG is an alias for module GIGtk__RcStyleG, which is missing

=== Unknown ===

    File "Gtk/AccelMap.ml", line 54, characters 4-27:
    54 |     [< Types.accel_map] obj
            ^^^^^^^^^^^^^^^^^^^^^^^
    Error: External identifiers must be functions


    File "Gtk/IconTheme.ml", line 150, characters 4-28:
    150 |     [< Types.icon_theme] obj
              ^^^^^^^^^^^^^^^^^^^^^^^^
    Error: External identifiers must be functions


    File "Gtk/CssProvider.ml", line 56, characters 4-30:
    56 |     [< Types.css_provider] obj
            ^^^^^^^^^^^^^^^^^^^^^^^^^^
    Error: External identifiers must be functions
          but an expression was expected of type float


    File "Gtk/RecentManager.ml", line 79, characters 4-32:
    79 |     [< Types.recent_manager] obj
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    Error: External identifiers must be functions


    File "Gtk/Settings.ml", line 229, characters 4-33:
    229 |     [< Types.settings] obj option
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    Error: External identifiers must be functions


    File "Gtk/Application.ml", line 28, characters 18-41:
    28 | let make_params = Application.make_params
                          ^^^^^^^^^^^^^^^^^^^^^^^
    Error: The module Application is an alias for module GIGtk__Application, which is missing


    File "Gtk/MountOperation.ml", line 24, characters 18-44:
    24 | let make_params = MountOperation.make_params
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^
    Error: The module MountOperation is an alias for module GIGtk__MountOperation, which is missing


    File "Gtk/NumerableIcon.ml", line 28, characters 18-42:
    28 | let make_params = EmblemedIcon.make_params
                          ^^^^^^^^^^^^^^^^^^^^^^^^
    Error: Unbound module EmblemedIcon











File "Gtk/StyleContextG.ml", line 111, characters 64-87:
111 |   StyleContext.make_params [] ~cont:(fun p -> new style_context (StyleContext.create p))
                                                                      ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type Types.style_context obj
       but an expression was expected of type
         ([> `giu | `screen | `style_context ] as 'a) obj
       Type Types.style_context = [ `giu | `style_context ]
       is not compatible with type [> `giu | `screen | `style_context ] as 'a 
       The second variant type does not allow tag(s) `screen



File "Gtk/TextTagG.ml", line 170, characters 30-45:
170 |   method event = self#connect TextTag.S.event
                                    ^^^^^^^^^^^^^^^
Error: Unbound value TextTag.S.event



File "Gtk/ThemingEngineG.ml", line 26, characters 16-45:
26 |   method load : ThemingEngineG.theming_engine option = 
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The module ThemingEngineG is an alias for module GIGtk__ThemingEngineG, which is missing



File "Gtk/TooltipG.ml", line 50, characters 53-71:
50 |   Tooltip.make_params [] ~cont:(fun p -> new tooltip (Tooltip.create p))
                                                          ^^^^^^^^^^^^^^^^^^
Error: This expression has type Types.tooltip obj
       but an expression was expected of type
         ([> `display | `giu | `tooltip ] as 'a) obj
       Type Types.tooltip = [ `giu | `tooltip ] is not compatible with type
         [> `display | `giu | `tooltip ] as 'a 
       The second variant type does not allow tag(s) `display



File "Gtk/TreeModelFilterG.ml", line 18, characters 21-42:
18 |   method get_model : TreeModelG.tree_model = 
                          ^^^^^^^^^^^^^^^^^^^^^
Error: Unbound module TreeModelG


File "Gtk/WindowG.ml", line 124, characters 2-71:
124 | ..method has_toplevel_focus : bool = 
125 |     Window.has_toplevel_focus obj.
Error: The method `has_toplevel_focus'
       has multiple definitions in this object

=== Missing signal ===

Hint: Did you mean GIGio?
File "Gtk/PlacesSidebarG.ml", line 52, characters 46-83:
52 |   method drag_action_requested = self#connect PlacesSidebar.S.drag_action_requested
                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Unbound value PlacesSidebar.S.drag_action_requested


=== Method Overriding ===

File "Gtk/ComboBoxTextG.ml", line 34, characters 2-60:
34 | ..method remove : int -> unit = 
35 |     ComboBoxText.remove obj.
Error: The method remove has type int -> unit but is expected to have type
         GObj.widget -> unit
       Type int is not compatible with type
         GObj.widget =
           < app_paintable : bool; as_widget : Gtk.widget obj;
             can_default : bool; can_focus : bool; coerce : GObj.widget;
             composite_child : bool; destroy : unit -> unit;
             drag : GObj.drag_ops; events : GdkEnums.event_mask list;
             expand : bool; focus_on_click : bool; get_oid : int;
             halign : GtkEnums.align; has_default : bool; has_focus : 
             bool; has_tooltip : bool; height_request : int; hexpand : 
             bool; hexpand_set : bool; is_focus : bool; margin : int;
             margin_bottom : int; margin_end : int; margin_left : int;
             margin_right : int; margin_start : int; margin_top : int;
             misc : GObj.misc_ops; name : string; no_show_all : bool;
             opacity : float; parent : Gtk.container obj option;
             receives_default : bool; scale_factor : int; sensitive : 
             bool; set_app_paintable : bool -> unit;
             set_can_default : bool -> unit; set_can_focus : bool -> unit;
             set_events : GdkEnums.event_mask list -> unit;
             set_expand : bool -> unit; set_focus_on_click : bool -> unit;
             set_halign : GtkEnums.align -> unit;
             set_has_default : bool -> unit; set_has_focus : bool -> unit;
             set_has_tooltip : bool -> unit;
             set_height_request : int -> unit; set_hexpand : bool -> unit;
             set_hexpand_set : bool -> unit; set_is_focus : bool -> unit;
             set_margin : int -> unit; set_margin_bottom : int -> unit;
             set_margin_end : int -> unit; set_margin_left : int -> unit;
             set_margin_right : int -> unit; set_margin_start : int -> unit;
             set_margin_top : int -> unit; set_name : string -> unit;
             set_no_show_all : bool -> unit; set_opacity : float -> unit;
             set_parent : Gtk.container obj option -> unit;
             set_receives_default : bool -> unit;
             set_sensitive : bool -> unit; set_style : Gtk.style -> unit;
             set_tooltip_markup : string -> unit;
             set_tooltip_text : string -> unit;
             set_valign : GtkEnums.align -> unit; set_vexpand : bool -> unit;
             set_vexpand_set : bool -> unit; set_visible : bool -> unit;
             set_width_request : int -> unit; style : Gtk.style;
             tooltip_markup : string; tooltip_text : string;
             valign : GtkEnums.align; vexpand : bool; vexpand_set : bool;
             visible : bool; width_request : int > 
